--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="required_field">Gerekli Alan*</string>
     <string name="login">Giriş Yap</string>
     <string name="password">Şifre</string>
+    <string name="visual_media"><![CDATA[Görsel & İşitsel]]></string>
 </resources>
