--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="password">Şifre</string>
     <string name="visual_media">TV+</string>
     <string name="hyperlink">Bu servise abone değilsiniz,\nlütfen müşteri temsilciniz ile <a href="https://medyatakip.com.tr/iletisim.html">iletişime</a> geçiniz.</string>
+    <string name="hyperlink2"><a href="">Görüntülemek için tıklayınız</a></string>
 </resources>
